# DIT227

./: Cargo.toml  build.rs
scenes/storm/: Storm.gltf
src/: main.rs  mesh.rs
src/shaders/: blit.frag  fullscreen_triangle.vert  static_mesh.frag  static_mesh.vert
src/shaders/common/: camera.glsl  math.glsl  random.glsl
src/shaders/particles/: particle_billboard.frag  particle_billboard.vert  rain_splash_spawn.comp  rainfall_spawn.comp  rainfall_update.comp  smoke_spawn.comp  smoke_update.comp  snowfall.frag  snowfall_spawn.comp  snowfall_update.comp  test_particles_spawn.comp  test_particles_update.comp
src/shaders/particles/common/: emit_function.glsl  spawn_common.glsl  system_buffers.glsl  update_common.glsl
