[package]
name = "dit227-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"
glutin = "0.28.0"
glam = "0.8.5"
rand = "0.8.5"
obj-rs = { version = "0.7.0", features = ["glium"] }
gltf = "1.0.0"
ouroboros = "0.15.0"
itertools = "0.10.3"

[build-dependencies]
# Shader pre-processing
tera = { version = "1.15.0", default-features = false }
walkdir = "2.3.2"